--- a/Lab4/Lab4.cbp
+++ b/Lab4/Lab4.cbp
@@ -30,9 +30,17 @@
 		<ExtraCommands>
 			<Add after='cmd /c &quot;packihx &lt;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).ihx &gt;$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).hex&quot;' />
 		</ExtraCommands>
+		<Unit filename="LCD.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="LCD.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="serial.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="serial.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
